hudson statistics